# usb-barcode-pyusb

./: .gitignore  LICENSE  README.md  setup.cfg
usb_barcode/: __main__.py  barcode_event.py  usb_barcode.py
