[metadata]
name = usb_barcode
version = 0.0.1
author = David Wilkening
author_email = git@david-wilkening.de

[options]
packages = find:
python_requires = >=3.8
install_requires =
  pyusb>=1.2
  json-stream>=1.3
  pyudev>=0.23.2

[options.entry_points]
console_scripts =
  usb-barcode = usb_barcode.__main__:main